# Copilotkit_Dental_Appointment_Schedular

./: README.md
agent-py/: pyproject.toml
agent-py/tutorial_quickstart/: Agents.py  Prompt.py  demo.py
agent-py/tutorial_quickstart/credentials/: credentials.json
agent-py/tutorial_quickstart/tool/: tools.py
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/src/app/: calendar-meeting-card.tsx  layout.tsx  loading-spinner.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
